--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== Welcome to the zinger.
+== Welcome to the nope.
 
 Rails is a web-application framework that includes everything needed to create
 database-backed web applications according to the Model-View-Control pattern.
